reports: add backend support for book flags
